cambios de pdf ventas

--- a/FRONT-END/src/app/modules/shoppings/shopping.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shopping.component.html
@@ -11,7 +11,10 @@
  [canSeeDetail]="true"
  [canStatus]="true" 
  [canCancel]="true"
- 
+ [calendar]="true"
+
+ (calendarField1)="setStartDate($event)"
+ (calendarField2)="setEndDate($event)"
  (create)="openShopping()"
  (export)="downloadPDF()"
  (cancel)="cancelShopping($event)"  
