diseño base de compras

--- a/FRONT-END/src/app/modules/shoppings/shopping.component.html
+++ b/FRONT-END/src/app/modules/shoppings/shopping.component.html
@@ -16,7 +16,7 @@
  (calendarField1)="setStartDate($event)"
  (calendarField2)="setEndDate($event)"
  (create)="openShopping()"
- (export)="downloadPDF()"
+ (export)="downloadPurchasePDF()"
  (cancel)="cancelShopping($event)"  
  (search)="searchShopping($event)" 
  (detail)="openShowModal($event)">
