Botón de descargar en créditos

--- a/FRONT-END/src/app/modules/credits/credits.component.html
+++ b/FRONT-END/src/app/modules/credits/credits.component.html
@@ -4,7 +4,7 @@
   [items]="filteredCredits" 
   [columns]="columns" 
   [canEdit]="false" 
-  [canExport]="true" 
+  [canExport]="false" 
   [canCreate]="false" 
   [canDelete]="false" 
   [canSeeDetail]="true" 
