Descarga de informes

--- a/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
+++ b/FRONT-END/src/app/modules/detailSale/detail-sale.component.html
@@ -6,7 +6,8 @@
 [items]="filteredSale" 
 [columns]="colums" 
 [canDelete]="false"
-[canExport]="true" 
+[canExport]="false"
+[PDF]="true" 
 [canEdit]="false" 
 [canCreate]="false" 
 [canCancel]="true"
