Configurando proyecto para usar API local y API desplegada

--- a/FRONT-END/src/app/modules/products/products.component.html
+++ b/FRONT-END/src/app/modules/products/products.component.html
@@ -50,7 +50,7 @@
                         <!-- pa mostrar los campos al frenta -->
                         <div class="field-group">
                             <div class="field" [ngClass]="{'error': isFieldInvalidCategori('nombreCategoria')}">
-                                <label for="nombreCategoria">Nombre categoria <span style="color: #E24C4C;">*</span></label>
+                                <label for="nombreCategoria">Nombre Categoría <span style="color: #E24C4C;">*</span></label>
                                 <input type="text" pInputText id="nombreCategoria" formControlName="nombreCategoria"
                                     required autofocus />
                                 <small class="p-error" *ngIf="isFieldInvalidCategori('nombreCategoria')">
@@ -59,7 +59,7 @@
                             </div>
 
                             <div class="field" [ngClass]="{'error': isFieldInvalidCategori('descripcionCategoria')}">
-                                <label for="descripcionCategoria">Descripcion</label>
+                                <label for="descripcionCategoria">Descripción</label>
                                 <input type="text" pInputText id="descripcionCategoria"
                                     formControlName="descripcionCategoria" />
                                 <small class="p-error" *ngIf="isFieldInvalidCategori('descripcionCategoria')">
